--- a/kubernetes-conatiner-patterns/init-postgres-db/init-deployment.yaml
+++ b/kubernetes-conatiner-patterns/init-postgres-db/init-deployment.yaml
@@ -18,6 +18,10 @@ spec:
         command: ['sh', '-c', 
           'until pg_isready -h postgres -p 5432; 
           do echo waiting for database; sleep 2; done;']
+      - name: check-db-ready
+        image: postgres:9.6.5
+        command: ['sh', '-c', 
+          'exit 1']
       containers:
       - image: deekshithsn/go-url-shortener:1.0
         name: go-url-shortener
